--- a/front/src/styles/Cadastro.css
+++ b/front/src/styles/Cadastro.css
@@ -134,3 +134,35 @@ body {
 .mensagem.erro {
   color: red;
 }
+
+/* Select tipo de usuário com mesmo estilo dos inputs */
+.cadastro-form select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 18px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  background-color: #fff;
+  color: #333;
+  font-size: 0.95rem;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  appearance: none; /* remove estilo padrão do navegador */
+  cursor: pointer;
+}
+
+/* Efeito de foco igual aos inputs */
+.cadastro-form select:focus {
+  border-color: #0d4c57;
+  box-shadow: 0 0 4px rgba(13, 76, 87, 0.4);
+}
+
+/* Seta personalizada no select */
+.cadastro-form select {
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%230d4c57' height='20' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M5 8l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 16px;
+  padding-right: 35px;
+}
+
